# qttube-plugin-interface

./: .gitmodules  CMakeLists.txt  QtTubePlugin.cmake  README.md
qttube-plugin/: pluginfwd.h  plugininterface.h  pluginmetadata.h
qttube-plugin/components/: configstore.h
qttube-plugin/components/auth/: authroutine.h  authstore.cpp  authstore.h  webauthroutine.cpp  webauthroutine.h
qttube-plugin/components/player/: player.h  webplayer.cpp  webplayer.h
qttube-plugin/components/replytypes/: videodata.h
qttube-plugin/components/settings/: settingsstore.h  settingswindow.cpp
qttube-plugin/objects/: badge.h  channel.h  notification.h  shelf.h  video.h
qttube-plugin/utils/: filesystem.h  httprequest.cpp  httprequest.h  localcache.cpp  localcache.h  replyutils.h
